# gosonnx

./: .gitignore  Cargo.toml  README.md
shader/: Add.glsl  AveragePool.glsl  BatchNormalization.glsl  Clip.glsl  Concat.glsl  Conv.glsl  ConvTranspose.glsl  Div.glsl  Double.glsl  Double.wgsl  Flatten.glsl  Gemm.glsl  GlobalAveragePool.glsl  HardSigmoid.glsl  MaxPool.glsl  Mul.glsl  Relu.glsl  Relu.wgsl  Resize.glsl  Sigmoid.glsl  _activation.glsl  _activation_def.glsl  _binary_elementwise.glsl  _unary_elementwise.glsl
src/: errors.rs  gpu.rs  graph.rs  graph_optim.rs  lib.rs  macros.rs  onnxparser.rs  utils.rs
src/onnx/: mod.rs  onnxparser.rs
src/ops/: activation_op.rs  add.rs  average_pool.rs  batch_normalization.rs  bin_op.rs  clip.rs  concat.rs  conv.rs  conv_transpose.rs  flatten.rs  gemm.rs  global_average_pool.rs  hard_sigmoid.rs  maxpool.rs  mod.rs  mul.rs  relu.rs  resize.rs  sigmoid.rs  un_op.rs
