[package]
name = "ss_gosonnx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
futures-intrusive = "0.5.0"
include_dir = "0.7.3"
pollster = "0.3.0"
uuid = { version = "1.4.1", features = ["v4"] }
wgpu = "0.17.1"
