[package]
name = "gosonnx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
futures-intrusive = "0.5.0"
include_dir = "0.7.3"
naga = "0.13.0"
pollster = "0.3.0"
tera = "1.19.1"
uuid = { version = "1.4.1", features = ["v4"] }
wgpu = { version = "0.17.1", features = ["glsl"] }
protobuf = { version = "2.28", features = ["bytes"] }
anyhow = { version = "1.0.75", features = ["backtrace"] }
